--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
     />
 
     <link
@@ -41,8 +41,10 @@
           <div class="container">
             <div class="row">
               <div class="col border-top text-right pt-3">9AM</div>
-              <div class="col-9 bg-secondary"></div>
-              <div class="col bg-primary saveBtn d-flex justify-content-center align-items-center">
+              <div class="col-9 bg-secondary time-slot" id=""></div>
+              <div
+                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
+              >
                 <i class="fa-regular fa-floppy-disk fa-2x"></i>
               </div>
             </div>
@@ -53,8 +55,10 @@
           <div class="container">
             <div class="row">
               <div class="col border-top text-right pt-3">10AM</div>
-              <div class="col-9 bg-secondary"></div>
-              <div class="col bg-primary saveBtn d-flex justify-content-center align-items-center">
+              <div class="col-9 bg-secondary time-slot" id=""></div>
+              <div
+                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
+              >
                 <i class="fa-regular fa-floppy-disk fa-2x"></i>
               </div>
             </div>
@@ -65,8 +69,10 @@
           <div class="container">
             <div class="row">
               <div class="col border-top text-right pt-3">11AM</div>
-              <div class="col-9 bg-secondary"></div>
-              <div class="col bg-primary saveBtn d-flex justify-content-center align-items-center">
+              <div class="col-9 bg-secondary time-slot" id=""></div>
+              <div
+                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
+              >
                 <i class="fa-regular fa-floppy-disk fa-2x"></i>
               </div>
             </div>
@@ -77,8 +83,10 @@
           <div class="container">
             <div class="row">
               <div class="col border-top text-right pt-3">12PM</div>
-              <div class="col-9 bg-secondary"></div>
-              <div class="col bg-primary saveBtn d-flex justify-content-center align-items-center">
+              <div class="col-9 bg-secondary time-slot" id=""></div>
+              <div
+                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
+              >
                 <i class="fa-regular fa-floppy-disk fa-2x"></i>
               </div>
             </div>
@@ -89,8 +97,10 @@
           <div class="container">
             <div class="row">
               <div class="col border-top text-right pt-3">1PM</div>
-              <div class="col-9 bg-secondary"></div>
-              <div class="col bg-primary saveBtn d-flex justify-content-center align-items-center">
+              <div class="col-9 bg-secondary time-slot" id=""></div>
+              <div
+                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
+              >
                 <i class="fa-regular fa-floppy-disk fa-2x"></i>
               </div>
             </div>
@@ -101,8 +111,10 @@
           <div class="container">
             <div class="row">
               <div class="col border-top text-right pt-3">2PM</div>
-              <div class="col-9 bg-secondary"></div>
-              <div class="col bg-primary saveBtn d-flex justify-content-center align-items-center">
+              <div class="col-9 bg-secondary time-slot" id=""></div>
+              <div
+                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
+              >
                 <i class="fa-regular fa-floppy-disk fa-2x"></i>
               </div>
             </div>
@@ -113,8 +125,10 @@
           <div class="container">
             <div class="row">
               <div class="col border-top text-right pt-3">3PM</div>
-              <div class="col-9 bg-secondary"></div>
-              <div class="col bg-primary saveBtn d-flex justify-content-center align-items-center">
+              <div class="col-9 bg-secondary time-slot" id=""></div>
+              <div
+                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
+              >
                 <i class="fa-regular fa-floppy-disk fa-2x"></i>
               </div>
             </div>
@@ -125,8 +139,10 @@
           <div class="container">
             <div class="row">
               <div class="col border-top text-right pt-3">4PM</div>
-              <div class="col-9 bg-secondary"></div>
-              <div class="col bg-primary saveBtn d-flex justify-content-center align-items-center">
+              <div class="col-9 bg-secondary time-slot" id=""></div>
+              <div
+                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
+              >
                 <i class="fa-regular fa-floppy-disk fa-2x"></i>
               </div>
             </div>
@@ -137,8 +153,10 @@
           <div class="container">
             <div class="row">
               <div class="col border-top text-right pt-3">5PM</div>
-              <div class="col-9 bg-secondary"></div>
-              <div class="col bg-primary saveBtn d-flex justify-content-center align-items-center">
+              <div class="col-9 bg-secondary time-slot" id=""></div>
+              <div
+                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
+              >
                 <i class="fa-regular fa-floppy-disk fa-2x"></i>
               </div>
             </div>
