added classes for smaller screens and added past class to appropriate elements

--- a/index.html
+++ b/index.html
@@ -32,134 +32,160 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
     <!-- MAIN CONTAINER -->
-    <main class="container mb-4">
-      <!-- MAIN ROW CONTAINER -->
-      <div class="row-cols-1">
+    <main class="container mb-5">
         <!-- SUB CONTAINER 9AM -->
-        <div class="col">
-          <div class="container">
-            <div class="row">
-              <div class="col border-top text-right pt-3">9AM</div>
-              <div class="col-9 bg-secondary time-slot" id=""></div>
-              <div
-                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
-              >
-                <i class="fa-regular fa-floppy-disk fa-2x"></i>
-              </div>
-            </div>
+        <div class="row">
+          <div
+            class="col-md col-2 border-top text-right"
+          >
+            9AM
+          </div>
+          <div
+            class="col-md-9 col-8 time-slot pt-3 task-to-do"
+            id=""
+          ></div>
+          <div
+            class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
+          >
+            <i class="fa-regular fa-floppy-disk fa-2x"></i>
           </div>
         </div>
         <!-- SUB CONTAINER 10AM -->
-        <div class="col">
-          <div class="container">
-            <div class="row">
-              <div class="col border-top text-right pt-3">10AM</div>
-              <div class="col-9 bg-secondary time-slot" id=""></div>
-              <div
-                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
-              >
-                <i class="fa-regular fa-floppy-disk fa-2x"></i>
-              </div>
-            </div>
+        <div class="row">
+          <div
+            class="col-md col-2 border-top text-right"
+          >
+            10AM
+          </div>
+          <div
+            class="col-md-9 col-8 time-slot pt-3 task-to-do"
+            id=""
+          ></div>
+          <div
+            class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
+          >
+            <i class="fa-regular fa-floppy-disk fa-2x"></i>
           </div>
         </div>
         <!-- SUB CONTAINER 11AM -->
-        <div class="col">
-          <div class="container">
-            <div class="row">
-              <div class="col border-top text-right pt-3">11AM</div>
-              <div class="col-9 bg-secondary time-slot" id=""></div>
-              <div
-                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
-              >
-                <i class="fa-regular fa-floppy-disk fa-2x"></i>
-              </div>
-            </div>
+        <div class="row">
+          <div
+            class="col-md col-2 border-top text-right"
+          >
+            11AM
+          </div>
+          <div
+            class="col-md-9 col-8 time-slot pt-3 task-to-do"
+            id=""
+          ></div>
+          <div
+            class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
+          >
+            <i class="fa-regular fa-floppy-disk fa-2x"></i>
           </div>
         </div>
         <!-- SUB CONTAINER 12PM -->
-        <div class="col">
-          <div class="container">
-            <div class="row">
-              <div class="col border-top text-right pt-3">12PM</div>
-              <div class="col-9 bg-secondary time-slot" id=""></div>
-              <div
-                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
-              >
-                <i class="fa-regular fa-floppy-disk fa-2x"></i>
-              </div>
-            </div>
+        <div class="row">
+          <div
+            class="col-md col-2  border-top text-right"
+          >
+            12PM
+          </div>
+          <div
+            class="col-md-9 col-8 time-slot pt-3 task-to-do"
+            id=""
+          ></div>
+          <div
+            class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
+          >
+            <i class="fa-regular fa-floppy-disk fa-2x"></i>
           </div>
         </div>
         <!-- SUB CONTAINER 1PM -->
-        <div class="col">
-          <div class="container">
-            <div class="row">
-              <div class="col border-top text-right pt-3">1PM</div>
-              <div class="col-9 bg-secondary time-slot" id=""></div>
-              <div
-                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
-              >
-                <i class="fa-regular fa-floppy-disk fa-2x"></i>
-              </div>
-            </div>
+        <div class="row">
+          <div
+            class="col-md col-2  border-top text-right"
+          >
+            1PM
+          </div>
+          <div
+            class="col-md-9 col-8 time-slot pt-3 task-to-do"
+            id=""
+          ></div>
+          <div
+            class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
+          >
+            <i class="fa-regular fa-floppy-disk fa-2x"></i>
           </div>
         </div>
         <!-- SUB CONTAINER 2PM -->
-        <div class="col">
-          <div class="container">
-            <div class="row">
-              <div class="col border-top text-right pt-3">2PM</div>
-              <div class="col-9 bg-secondary time-slot" id=""></div>
-              <div
-                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
-              >
-                <i class="fa-regular fa-floppy-disk fa-2x"></i>
-              </div>
-            </div>
+        <div class="row">
+          <div
+            class="col-md col-2  border-top text-right"
+          >
+            2PM
+          </div>
+          <div
+            class="col-md-9 col-8 time-slot pt-3 task-to-do"
+            id=""
+          ></div>
+          <div
+            class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
+          >
+            <i class="fa-regular fa-floppy-disk fa-2x"></i>
           </div>
         </div>
         <!-- SUB CONTAINER 3PM -->
-        <div class="col">
-          <div class="container">
-            <div class="row">
-              <div class="col border-top text-right pt-3">3PM</div>
-              <div class="col-9 bg-secondary time-slot" id=""></div>
-              <div
-                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
-              >
-                <i class="fa-regular fa-floppy-disk fa-2x"></i>
-              </div>
-            </div>
+        <div class="row">
+          <div
+            class="col-md col-2  border-top text-right"
+          >
+            3PM
+          </div>
+          <div
+            class="col-md-9 col-8 time-slot pt-3 task-to-do"
+            id=""
+          ></div>
+          <div
+            class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
+          >
+            <i class="fa-regular fa-floppy-disk fa-2x"></i>
           </div>
         </div>
         <!-- SUB CONTAINER 4PM-->
-        <div class="col">
-          <div class="container">
-            <div class="row">
-              <div class="col border-top text-right pt-3">4PM</div>
-              <div class="col-9 bg-secondary time-slot" id=""></div>
-              <div
-                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
-              >
-                <i class="fa-regular fa-floppy-disk fa-2x"></i>
-              </div>
-            </div>
+        <div class="row">
+          <div
+            class="col-md col-2  border-top text-right"
+          >
+            4PM
+          </div>
+          <div
+            class="col-md-9 col-8 time-slot pt-3 task-to-do"
+            id=""
+          ></div>
+          <div
+            class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
+          >
+            <i class="fa-regular fa-floppy-disk fa-2x"></i>
           </div>
         </div>
         <!-- SUB CONTAINER 5PM -->
-        <div class="col">
-          <div class="container">
-            <div class="row">
-              <div class="col border-top text-right pt-3">5PM</div>
-              <div class="col-9 bg-secondary time-slot" id=""></div>
-              <div
-                class="col bg-primary saveBtn d-flex justify-content-center align-items-center"
-              >
-                <i class="fa-regular fa-floppy-disk fa-2x"></i>
-              </div>
-            </div>
+        <div class="row">
+          <div
+            class="col-md col-2  border-top text-right"
+          >
+            5PM
+          </div>
+          <div
+            class="col-md-9 col-8 time-slot pt-3 task-to-do"
+            id=""
+          ></div>
+          <div
+            class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
+          >
+            <i class="fa-regular fa-floppy-disk fa-2x"></i>
           </div>
         </div>
       </div>
