added function to change bg colors after text input

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             9AM
           </div>
           <div
-            class="col-md-9 col-8 time-slot pt-3 task-to-do"
-            id=""
+            class="col-md-9 col-8 time-slot pt-3 task-to-do future" id="nine" 
+            
           ></div>
           <div
             class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
@@ -60,8 +60,8 @@
             10AM
           </div>
           <div
-            class="col-md-9 col-8 time-slot pt-3 task-to-do"
-            id=""
+            class="col-md-9 col-8 time-slot pt-3 task-to-do future"
+            id="ten"
           ></div>
           <div
             class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
@@ -77,8 +77,8 @@
             11AM
           </div>
           <div
-            class="col-md-9 col-8 time-slot pt-3 task-to-do"
-            id=""
+            class="col-md-9 col-8 time-slot pt-3 task-to-do future"
+            id="eleven"
           ></div>
           <div
             class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
@@ -94,8 +94,8 @@
             12PM
           </div>
           <div
-            class="col-md-9 col-8 time-slot pt-3 task-to-do"
-            id=""
+            class="col-md-9 col-8 time-slot pt-3 task-to-do future"
+            id="twelve"
           ></div>
           <div
             class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
@@ -111,8 +111,8 @@
             1PM
           </div>
           <div
-            class="col-md-9 col-8 time-slot pt-3 task-to-do"
-            id=""
+            class="col-md-9 col-8 time-slot pt-3 task-to-do future"
+            id="one"
           ></div>
           <div
             class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
@@ -128,8 +128,8 @@
             2PM
           </div>
           <div
-            class="col-md-9 col-8 time-slot pt-3 task-to-do"
-            id=""
+            class="col-md-9 col-8 time-slot pt-3 task-to-do future"
+            id="two"
           ></div>
           <div
             class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
@@ -145,8 +145,8 @@
             3PM
           </div>
           <div
-            class="col-md-9 col-8 time-slot pt-3 task-to-do"
-            id=""
+            class="col-md-9 col-8 time-slot pt-3 task-to-do future"
+            id="three"
           ></div>
           <div
             class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
@@ -162,8 +162,8 @@
             4PM
           </div>
           <div
-            class="col-md-9 col-8 time-slot pt-3 task-to-do"
-            id=""
+            class="col-md-9 col-8 time-slot pt-3 task-to-do future"
+            id="four"
           ></div>
           <div
             class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
@@ -179,8 +179,8 @@
             5PM
           </div>
           <div
-            class="col-md-9 col-8 time-slot pt-3 task-to-do"
-            id=""
+            class="col-md-9 col-8 time-slot pt-3 task-to-do future"
+            id="five"
           ></div>
           <div
             class="col-md col-2 bg-primary saveBtn d-flex justify-content-center align-items-center"
